# PR2_arm_planner

./: .gitignore  README.md
leatherman/: manifest.xml
single_arm_benchmarks/benchmark_manipulation_tests/: CMakeLists.txt  Efficiency.m  benn_planner_stats.csv  fbp_tests.yaml  locations_countertop.yaml  manifest.xml
single_arm_benchmarks/benchmark_manipulation_tests/config/: experiments_complete_countertop.yaml  experiments_complete_tabletop.yaml  experiments_complete_tunnel.yaml  experiments_consistency.yaml  experiments_consistency2.yaml  experiments_consistency3.yaml  experiments_countertop.yaml  experiments_countertop_first.yaml  experiments_ijrr_heuristic_paper_image.yaml  experiments_industrial.yaml  experiments_industrial_complete.yaml  experiments_industrial_first.yaml  experiments_tabletop_first.yaml  experiments_tunnel_first.yaml  locations_consistency.yaml  locations_consistency_under_table2.yaml  locations_consistency_under_table3.yaml  locations_countertop.yaml  locations_ijrr_heuristic_paper_image.yaml  locations_industrial.yaml  locations_tabletop.yaml  single_arm_consistency.yaml  single_arm_countertop.yaml  single_arm_countertop1.yaml  single_arm_countertop10.yaml  single_arm_countertop11.yaml  single_arm_countertop12.yaml  single_arm_countertop13.yaml  single_arm_countertop14.yaml  single_arm_countertop15.yaml  single_arm_countertop16.yaml  single_arm_countertop2.yaml  single_arm_countertop3.yaml  single_arm_countertop4.yaml  single_arm_countertop5.yaml  single_arm_countertop6.yaml  single_arm_countertop7.yaml  single_arm_countertop8.yaml  single_arm_countertop9.yaml  single_arm_ijrr_heuristic_paper_image.yaml  (+51 more)
single_arm_benchmarks/benchmark_manipulation_tests/env/: tabletop (copy).env  tabletop.env  tabletop_fahad.env  tabletop_with_object.env  tunnel.env
single_arm_benchmarks/benchmark_manipulation_tests/include/benchmark_manipulation_tests/: benchmark_manipulation_tests.h
single_arm_benchmarks/benchmark_manipulation_tests/launch/: consistency_tests.launch  countertop_paths.launch  countertop_tests.launch  countertop_tests1.launch  countertop_tests10.launch  countertop_tests11.launch  countertop_tests12.launch  countertop_tests13.launch  countertop_tests14.launch  countertop_tests15.launch  countertop_tests16.launch  countertop_tests2.launch  countertop_tests3.launch  countertop_tests4.launch  countertop_tests5.launch  countertop_tests6.launch  countertop_tests7.launch  countertop_tests8.launch  countertop_tests9.launch  ijrr_heuristic_paper_image.launch  industrial_paths.launch  industrial_tests.launch  industrial_tests1.launch  industrial_tests10.launch  industrial_tests11.launch  industrial_tests12.launch  industrial_tests13.launch  industrial_tests14.launch  industrial_tests15.launch  industrial_tests16.launch  industrial_tests2.launch  industrial_tests3.launch  industrial_tests4.launch  industrial_tests5.launch  industrial_tests6.launch  industrial_tests7.launch  industrial_tests8.launch  industrial_tests9.launch  run_tests.sh  run_tests_full.sh  (+37 more)
single_arm_benchmarks/benchmark_manipulation_tests/maps/: myGray.pgm
single_arm_benchmarks/benchmark_manipulation_tests/src/: benchmark_manipulation_tests.cpp  benchmark_manipulation_tests_back.cpp  run_test.cpp  visualize_paths.cpp
single_arm_benchmarks/benchmark_manipulation_tests/src/benchmark_manipulation_tests/srv/: _GetMobileArmPlan.py
single_arm_benchmarks/benchmark_manipulation_tests/srv/: GetMobileArmPlan.srv
single_arm_benchmarks/ompl_arm_planner/: CMakeLists.txt  manifest.xml  temp_build.sh
single_arm_benchmarks/ompl_arm_planner/include/ompl_arm_planner/: ompl_arm_planner_interface.h
single_arm_benchmarks/ompl_arm_planner/src/: ompl_arm_planner_interface.cpp
(+53 files in other folders)
